erro.txt
index.js:627 Uncaught Error: Syntax error: tailwindcss: /mnt/c/Users/levym/Documents/My/lmc-site/apps/web/app/globals.css Cannot apply unknown utility class `bg-background`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive

> 1 | @tailwind base;
    | ^
  2 | @tailwind components;
  3 | @tailwind utilities;

    at getCssError (file:///mnt/c/Users/levym/Documents/My/lmc-site/node_modules/.pnpm/next@14.…/next/dist/build/webpack/plugins/wellknown-errors-plugin/parseCss.js:24:16)
    at getModuleBuildError (file:///mnt/c/Users/levym/Documents/My/lmc-site/node_modules/.pnpm/next@14.…build/webpack/plugins/wellknown-errors-plugin/webpackModuleError.js:116:43)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async (file:///mnt/c/Users/levym/Documents/My/lmc-site/node_modules/.pnpm/next@14.…les/next/dist/build/webpack/plugins/wellknown-errors-plugin/index.js:29:49)
    at async (file:///mnt/c/Users/levym/Documents/My/lmc-site/node_modules/.pnpm/next@14.…les/next/dist/build/webpack/plugins/wellknown-errors-plugin/index.js:27:21)

websocket.js:46 [HMR] connected
installHook.js:1 ./app/globals.css:1:1
Syntax error: tailwindcss: /mnt/c/Users/levym/Documents/My/lmc-site/apps/web/app/globals.css Cannot apply unknown utility class `bg-background`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive

> 1 | @tailwind base;
    | ^
  2 | @tailwind components;
  3 | @tailwind utilities;
favicon.ico:1 
 GET http://localhost:3000/favicon.ico 404 (Not Found)
﻿

